add new feature 1-lazy loading  2-dark mode 3-improve responive with all screen

--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,7 @@ a:hover {
 .bg-main-light {
     background-color: var(--light-color) !important;
 }
+
+.dark .slick-dots li button:before {
+    color: white !important;
+}
